fix: Corrected root location in HTML for linked files and added missing download.svg
- Fixed the paths to ensure proper loading of CSS and JavaScript files.
- Added the missing download.svg icon to the project.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>QR Code Generator</title>
   </head>
 
@@ -32,16 +32,16 @@
       <div class="action-container">
         <a href="#" class="download btn" download="QRCode">
           <span>Download</span>
-          <img src="download.svg" alt="" />
+          <img src="./download.svg" alt="" />
         </a>
         <button class="btn share-btn">
           <span>Share</span>
-          <img src="share.svg" alt="" />
+          <img src="./share.svg" alt="" />
         </button>
       </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
